# task-management

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_create_jobs.py  0002_status_indexes.py
app/: celery_app.py  config.py  logging_setup.py  main.py  metrics.py  tasks.py
app/api/: routes.py
app/db/: async_db.py  base.py  sync_db.py
app/models/: __init__.py  job.py
app/schemas/: job.py
app/services/: job_service.py
app/validation/: __main__.py
deploy/: README.md  ansible.cfg  secrets.example.env
deploy/dev-staging/: Dockerfile.runner  Dockerfile.staging  dev_staging.ps1  docker-compose.yml  entrypoint.sh  inventory.local.ini
deploy/inventory/: production.ini  staging.ini
deploy/playbooks/: deploy.yml
deploy/roles/app/tasks/: main.yml
deploy/roles/app/templates/: app.env.j2  docker-compose.yml.j2  postgres-Dockerfile.j2
docker/postgres/: Dockerfile  docker-entrypoint-ssl.sh
docs/: ARCHITECTURE.md  ROADMAP.md  SCALING.md  VALIDATION.md
scripts/: docker_stress_test.py  inspect_sweep.py  setup_github_secrets.ps1  smoke_listing_check.py  smoke_quota_payload.py  start_local_workers.ps1  validation_api_restart.py  validation_cancel.py  validation_kill_resume.py  validation_pool_saturation.py  validation_redis_blip.py
tests/: conftest.py  test_app.py  test_postgres_integration.py
