[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-celery-sqlalchemy-app"
version = "0.2.0"
description = "Production-ready FastAPI + Celery + SQLAlchemy v2 sweep orchestration layout"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "sqlalchemy>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "celery>=5.4",
  "redis>=5.0",
  "psycopg[binary]>=3.1",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "prometheus-client>=0.20",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "aiosqlite>=0.20",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
